welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:16: error: not found: value RED
faireFle(RED);
         ^FlowerPot:18: error: not found: value CYAN
faireFle(CYAN)
         ^FlowerPot:22: error: not found: value ORANGE
faireFle(ORANGE)
         ^FlowerPot:27: error: not found: value GREEN
faireFle(GREEN)
         ^FlowerPot:29: error: not found: value PINK
faireFle(PINK)
         ^